// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChatList /> renders active 1`] = `
<a
  className="MuiButtonBase-root-65 MuiListItem-root-55 MuiListItem-default-58 MuiListItem-gutters-62 MuiListItem-button-63 ChatListItem-activeItem-54"
  href="/chat/12345"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex={0}
>
  <div
    className="MuiAvatar-root-67 MuiAvatar-colorDefault-68"
    style={
      Object {
        "backgroundColor": "#ffc107",
      }
    }
  >
    MC
  </div>
  <div
    className="MuiListItemText-root-70"
  >
    <h3
      className="MuiTypography-root-76 MuiTypography-subheading-83 MuiListItemText-primary-73"
    >
      My Chat
    </h3>
    <p
      className="MuiTypography-root-76 MuiTypography-body1-85 MuiTypography-colorTextSecondary-98 MuiListItemText-secondary-74"
    >
      2 days ago
    </p>
  </div>
  <span
    className="MuiTouchRipple-root-100"
  />
</a>
`;

exports[`<ChatList /> renders correctly 1`] = `
<a
  className="MuiButtonBase-root-65 MuiListItem-root-55 MuiListItem-default-58 MuiListItem-gutters-62 MuiListItem-button-63"
  href="/chat/12345"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex={0}
>
  <div
    className="MuiAvatar-root-67 MuiAvatar-colorDefault-68"
    style={
      Object {
        "backgroundColor": "#ffc107",
      }
    }
  >
    MC
  </div>
  <div
    className="MuiListItemText-root-70"
  >
    <h3
      className="MuiTypography-root-76 MuiTypography-subheading-83 MuiListItemText-primary-73"
    >
      My Chat
    </h3>
    <p
      className="MuiTypography-root-76 MuiTypography-body1-85 MuiTypography-colorTextSecondary-98 MuiListItemText-secondary-74"
    >
      2 days ago
    </p>
  </div>
  <span
    className="MuiTouchRipple-root-100"
  />
</a>
`;

exports[`<ChatList /> renders disabled 1`] = `
<a
  className="MuiButtonBase-root-65 MuiButtonBase-disabled-66 MuiListItem-root-55 MuiListItem-default-58 MuiListItem-gutters-62 MuiListItem-disabled-60 MuiListItem-button-63"
  href="/chat/12345"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex={-1}
>
  <div
    className="MuiAvatar-root-67 MuiAvatar-colorDefault-68"
    style={
      Object {
        "backgroundColor": "#ffc107",
      }
    }
  >
    MC
  </div>
  <div
    className="MuiListItemText-root-70"
  >
    <h3
      className="MuiTypography-root-76 MuiTypography-subheading-83 MuiListItemText-primary-73"
    >
      My Chat
    </h3>
    <p
      className="MuiTypography-root-76 MuiTypography-body1-85 MuiTypography-colorTextSecondary-98 MuiListItemText-secondary-74"
    >
      2 days ago
    </p>
  </div>
</a>
`;
